Changelog for Writer2LaTeX version 1.0 -> 1.2

---------- version 1.1.1 ----------

[w2l] Partial support for the new list formatting of ODT 1.2 (implemented in OOo 3.0)

[all] Filter: Filters out characters that are illegal in xml
  (this fixes a problem with rtf documents imported in OOo)

[w2x] Introduced hack to set link attributes using the link name:
  accepts a semicolon separated list of name=value, for example
  title=link to next page;rel=next

[all] Added icon and publisher information to the extensions

[w2l] Added XeTeX as possible backend in dialog

[all] Bugfix: Paragraphs containing only fields are no longer lost

[w4l] Added Writer4LaTeX extension

[all] Buildfile is adapted to work with separated ure and office (OOo 3.0+)

[all] Bugfix: Corrected path to descriptions in oxt

[w2x] Bugfix: Corrected typo in german translation of navigation bar

[all] Raised requirement from Java 1.4 to Java 5